2023-07-07  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: show information for all the disks (--all option)

2023-06-27  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (parse_destination_info): Parsing of destinationinfo with more than one destination

2023-06-19  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: Support multiple destinations

2023-06-17  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (status): Fixed a small display bug when fining changes is at 0%

2023-05-31  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (COMPUTER_TMP): Better computer name

2023-05-30  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (status): Show the time window for the log analysis

2023-05-26  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: Parse only the last 60 minutes in the logs (faster)

2023-05-17  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: Prints a short message during wait times

2023-05-04  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (status): fix if no speed is available
        * tmstatus.sh: --verbose option

2023-05-03  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (usage): -s option
        * tmstatus.sh (usage): -p option
        * tmstatus.sh (status): fix the output if the finding changes progress is 100%

2023-05-02  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: if the logs are read, display the backup speed
        * tmstatus.sh (status): Shorten the %/s if less then 1
        * tmstatus.sh (status): Handle a speed of '-'

2023-04-02  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: filter out spurious df errors

2023-03-30  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (status): Percent of work done by finding changes

2023-03-24  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (status): Warn if --today is specified and the time machine is offline

2023-03-20  Matteo Corti  <matteo@corti.li>
